fix: @media for collapse

--- a/src/components/Collapse/Collaplse.scss
+++ b/src/components/Collapse/Collaplse.scss
@@ -31,5 +31,8 @@
       text-align: right;
       width: 80%;
     }
+    @media only screen and (max-width: 480px) {
+      font-size: 1rem;
+    }
   }
 }
